--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Học Git và để code lên Github</h1>
+    <h2>học push code</h2>
+    <ol>
+        <li>$ git status</li>
+        <li>$ git add .</li>
+        <li>$ git commit -m "message"</li>
+        <li>$ git push origin main</li>
+        <p>cần thực hiện đủ 4 bước mới push lên Github được</p>
+    </ol>
 </body>
 </html>
