bai tap day04 layout

--- a/HTML-CSS-co-ban/Day04/bai-tap-day04/index.html
+++ b/HTML-CSS-co-ban/Day04/bai-tap-day04/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web layout</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://media.techmaster.vn/api/static/8103/WZ16l_25" type="image/x-icon">
 </head>
 <body>
     <div id="Container">
